--- a/test-chat.html
+++ b/test-chat.html
@@ -16,14 +16,42 @@
         height: 300px;
         overflow-y: scroll;
         margin-bottom: 10px;
+        background: #f9f9f9;
       }
       #messages div {
         margin-bottom: 5px;
+        padding: 5px;
+        border-bottom: 1px solid #eee;
+      }
+      .message-you {
+        color: blue;
+        text-align: right;
+      }
+      .message-other {
+        color: green;
+      }
+      .system-message {
+        color: gray;
+        font-style: italic;
       }
       input,
       button {
         padding: 8px;
         margin: 5px 0;
+      }
+      #connectionStatus {
+        font-weight: bold;
+      }
+      .connected {
+        color: green;
+      }
+      .disconnected {
+        color: red;
+      }
+      .message-status {
+        font-size: 0.8em;
+        color: #888;
+        margin-left: 5px;
       }
     </style>
   </head>
@@ -33,7 +61,7 @@
       <label for="userId">Your User ID:</label>
       <input type="text" id="userId" placeholder="Enter your user ID" />
       <button onclick="connect()">Connect</button>
-      <div id="connectionStatus"></div>
+      <span id="connectionStatus" class="disconnected">Disconnected</span>
     </div>
     <div>
       <label for="conversationId">Conversation ID:</label>
@@ -43,85 +71,202 @@
     </div>
     <div id="messages"></div>
     <div>
-      <label for="participants">Participant IDs (comma separated):</label>
-      <input type="text" id="participants" placeholder="e.g. userA,userB,userC" />
-      <input type="text" id="messageContent" placeholder="Message" />
+      <label for="receiverId">Receiver ID:</label>
+      <input type="text" id="receiverId" placeholder="Enter receiver ID" />
+      <input type="text" id="messageContent" placeholder="Type your message" onkeyup="handleTypingIndicator(event)" />
       <button onclick="sendMessage()">Send Message</button>
     </div>
+    <div>
+      <label for="messageId">Message ID:</label>
+      <input type="text" id="messageId" placeholder="Enter message ID" />
+      <select id="messageStatus">
+        <option value="delivered">Delivered</option>
+        <option value="seen">Seen</option>
+      </select>
+      <button onclick="updateMessageStatus()">Update Status</button>
+    </div>
+    <div>
+      <button onclick="markConversationAsRead()">Mark Conversation As Read</button>
+    </div>
+
     <script>
       let socket;
       let currentConversation = null;
+      let currentUserId = '';
+      let typingTimeout = null;
+      let messageStatuses = {};
 
       function connect() {
-        const userId = document.getElementById('userId').value.trim();
-        if (!userId) return alert('Please enter your User ID');
-        socket = io('http://localhost:3000', { query: { userId } });
+        currentUserId = document.getElementById('userId').value.trim();
+        if (!currentUserId) return alert('Please enter your user ID');
+
+        if (socket) {
+          socket.disconnect();
+        }
+
+        socket = io('http://localhost:3000', {
+          query: { userId: currentUserId },
+          transports: ['websocket'],
+        });
+
         socket.on('connect', () => {
-          document.getElementById('connectionStatus').innerText = 'Connected';
+          document.getElementById('connectionStatus').textContent = 'Connected';
+          document.getElementById('connectionStatus').className = 'connected';
         });
+
         socket.on('disconnect', () => {
-          document.getElementById('connectionStatus').innerText = 'Disconnected';
+          document.getElementById('connectionStatus').textContent = 'Disconnected';
+          document.getElementById('connectionStatus').className = 'disconnected';
+          appendSystemMessage('Disconnected from server');
         });
-        socket.on('receiveMessage', (msg) => {
-          appendMessage(`From ${msg.senderId}: ${msg.content}`);
+
+        socket.on('connect_error', (err) => {
+          appendSystemMessage('Connection error: ' + err.message);
         });
+
+        socket.on('receiveMessage', (message) => {
+          console.log('Received message:', message);
+          const senderName = message.sender?.name || message.senderId;
+          appendMessage(senderName, message.content, false, message.messageId);
+
+          if (currentConversation) {
+            socket.emit('updateMessageStatus', {
+              messageId: message.messageId,
+              status: 'seen',
+            });
+          }
+        });
+
         socket.on('messageStatusUpdated', (data) => {
-          appendMessage(`Status of ${data.messageId} → ${data.status}`);
+          messageStatuses[data.messageId] = data.status;
+          updateMessageStatusDisplay(data.messageId);
+          appendSystemMessage(`Message: ${data.status}`);
         });
+
+        socket.on('conversationRead', (data) => {
+          appendSystemMessage(`All messages in conversation ${data.conversationId} were read by ${data.byUserId}`);
+          document.querySelectorAll('.message-you').forEach((el) => {
+            const statusEl = el.querySelector('.message-status');
+            if (statusEl) {
+              statusEl.textContent = 'read';
+            }
+          });
+        });
+      }
+
+      function updateMessageStatusDisplay(messageId) {
+        const status = messageStatuses[messageId];
+        if (!status) return;
+
+        const messageEl = document.querySelector(`[data-message-id="${messageId}"]`);
+        if (messageEl) {
+          let statusEl = messageEl.querySelector('.message-status');
+          if (!statusEl) {
+            statusEl = document.createElement('span');
+            statusEl.className = 'message-status';
+            messageEl.appendChild(statusEl);
+          }
+          statusEl.textContent = status;
+        }
       }
 
       function joinConversation() {
-        const cid = document.getElementById('conversationId').value.trim();
-        if (!socket) return alert('Connect first');
-        if (!cid) return alert('Enter a Conversation ID');
-        if (currentConversation) socket.emit('leaveConversation', currentConversation);
-        currentConversation = cid;
-        socket.emit('joinConversation', cid);
-        appendMessage(`Joined conversation ${cid}`);
+        const conversationId = document.getElementById('conversationId').value.trim();
+        if (!socket) return alert('Please connect first');
+        if (!conversationId) return alert('Please enter a conversation ID');
+
+        if (currentConversation) {
+          socket.emit('leaveConversation', { conversationId: currentConversation });
+        }
+
+        currentConversation = conversationId;
+        socket.emit('joinConversation', { conversationId });
+        appendSystemMessage(`Joined conversation: ${conversationId}`);
+
+        markConversationAsRead();
       }
 
       function leaveConversation() {
-        if (!socket || !currentConversation) return;
-        socket.emit('leaveConversation', currentConversation);
-        appendMessage(`Left conversation ${currentConversation}`);
+        if (!currentConversation) return alert('You are not in any conversation');
+        socket.emit('leaveConversation', { conversationId: currentConversation });
+        appendSystemMessage(`Left conversation: ${currentConversation}`);
         currentConversation = null;
       }
 
       function sendMessage() {
-        if (!socket) return alert('Connect first');
-        const senderId = document.getElementById('userId').value.trim();
-        const raw = document.getElementById('participants').value.trim();
+        if (!socket) return alert('Please connect first');
+
+        const receiverId = document.getElementById('receiverId').value.trim();
         const content = document.getElementById('messageContent').value.trim();
-        if (!raw) return alert('Enter participant ID(s)');
-        if (!content) return alert('Enter a message');
-        const parts = raw
-          .split(',')
-          .map((s) => s.trim())
-          .filter(Boolean);
-        const isGroup = parts.length > 1;
-        const payload = { senderId, content, messageType: 'TEXT' };
-        if (isGroup) {
-          payload.groupParticipantIds = [senderId, ...parts];
-          payload.receiverId = parts[0];
-        } else {
-          payload.receiverId = parts[0];
-        }
-        socket.emit('sendMessage', payload);
+
+        if (!receiverId) return alert('Please enter receiver ID');
+        if (!content) return alert('Please enter a message');
+
+        const messageData = {
+          senderId: currentUserId,
+          receiverId: receiverId,
+          content: content,
+          messageType: 'TEXT',
+        };
+
+        appendMessage(currentUserId, content, true);
+        document.getElementById('messageContent').value = '';
+        socket.emit('sendMessage', messageData);
       }
 
-      function appendMessage(txt) {
-        const d = document.createElement('div');
-        d.innerText = txt;
-        const box = document.getElementById('messages');
-        box.appendChild(d);
-        box.scrollTop = box.scrollHeight;
+      function updateMessageStatus() {
+        const messageId = document.getElementById('messageId').value.trim();
+        const status = document.getElementById('messageStatus').value;
+        if (!messageId) return alert('Please enter message ID');
+
+        socket.emit('updateMessageStatus', {
+          messageId: messageId,
+          status: status,
+        });
       }
 
-      window.addEventListener('beforeunload', () => {
-        if (socket && currentConversation) {
-          socket.emit('leaveConversation', currentConversation);
+      function markConversationAsRead() {
+        if (!currentConversation) return alert('Please join a conversation first');
+        socket.emit('markConversationAsRead', {
+          conversationId: currentConversation,
+          userId: currentUserId,
+        });
+      }
+
+      function appendMessage(senderId, content, isYou, messageId = '') {
+        const messagesDiv = document.getElementById('messages');
+        const messageDiv = document.createElement('div');
+        messageDiv.className = isYou ? 'message-you' : 'message-other';
+        messageDiv.textContent = isYou ? `You: ${content}` : `${senderId}: ${content}`;
+
+        if (messageId) {
+          messageDiv.setAttribute('data-message-id', messageId);
         }
-      });
+
+        if (isYou && messageId) {
+          const statusSpan = document.createElement('span');
+          statusSpan.className = 'message-status';
+          statusSpan.textContent = messageStatuses[messageId] || 'sending';
+          messageDiv.appendChild(statusSpan);
+        }
+
+        messagesDiv.appendChild(messageDiv);
+        scrollToBottom();
+      }
+
+      function appendSystemMessage(text) {
+        const messagesDiv = document.getElementById('messages');
+        const messageDiv = document.createElement('div');
+        messageDiv.className = 'system-message';
+        messageDiv.textContent = text;
+        messagesDiv.appendChild(messageDiv);
+        scrollToBottom();
+      }
+
+      function scrollToBottom() {
+        const messagesDiv = document.getElementById('messages');
+        messagesDiv.scrollTop = messagesDiv.scrollHeight;
+      }
     </script>
   </body>
 </html>
