Refactor Chat and Notification Gateways; enhance logging and update socket connection paths

--- a/test-chat.html
+++ b/test-chat.html
@@ -104,7 +104,7 @@
           socket.disconnect();
         }
 
-        socket = io('http://localhost:3000', {
+        socket = io('http://localhost:3000/chat', {
           query: { userId: currentUserId },
           transports: ['websocket'],
         });
